Kubernet/KubernetWithPiyush/Resume-Projects/project1-ecommerce/kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    name: ecommerce
    project: resume-project-1
